#20: Add enforcing Converter